Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- actions tool export/import: The actions tool export/import mechanism 
  is no longer attempting to handle actions stored on tools other than
  itself. Other tools are themselves responsible for their actions.
  The importer has been fixed to add all action providers to the actions 
  tool, not just a select list of providers we know about.
  (https://bugs.launchpad.net/zope-cmf/+bug/177675)

- tool interfaces: Replace non-existing IMember interface with the
  correct IMemberData.

- CatalogTool: If proxy roles are set on a script that uses the catalog
  and those proxy roles have been unset using the ZMI, which results
  in an empty tuple as proxy roles, then the catalog would not correctly
  determine what the current user is allowed to see.
  (https://bugs.launchpad.net/zope-cmf/+bug/161729)

- Properties export/import: Get the string encoding for property 
  imports from the import context and fall back to UTF-8, which 
  mirrors the behavior for exports. This fixes property export/import 
  round tripping.
  (https://bugs.launchpad.net/zope-cmf/+bug/248853)

- traversal: Added ++add++ namespace for add views.

- Skinstool import: Fix imports that manipulate existing skins.
  (https://bugs.launchpad.net/zope-cmf/+bug/161732)

- ActionInformation: extend the ActionInformation and ActionInfo classes 
  to support a icon URL just like the newer Action class already does

- WorkflowTool: Passing the "magic" chain name "(Default)" to the
  setChainForPortalTypes method did not set the chain to the default 
  chain value as expected.
  (https://bugs.launchpad.net/zope-cmf/+bug/161702)

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFCore Content".

- utils: Add a new optional argument to ContentInit that allows hiding
  a content item's ZMI add list entry. The default is to leave the item